--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
     <footer id="main-footer">
       <div class="footer-items">
         <div>
-          <p>Copyright @<script>new Date().getFullYear(); </script>. All Rights Reserved.</p>
+          <p>Copyright @2020. All Rights Reserved.</p>
         </div>
 
         <div class="socials">
